--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/CompanyPages/CompanyDetails.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/CompanyPages/CompanyDetails.cshtml
@@ -2,38 +2,36 @@
 @model PRN231_2_EventFlowerExchange_FE.Pages.CompanyPages.DetailsModel
 
 @{
-    ViewData["Title"] = "Company Details";
-    ViewData["ShowHeader"] = false;
-    ViewData["ShowFooter"] = false;
+    ViewData["Title"] = "Details";
 }
 
-<partial name="_AdminHeader" />
-<div class="flex overflow-hidden bg-white pt-16">
-    <partial name="_AdminNav" />
-    <div class="bg-white border rounded-lg px-8 py-6 mx-auto my-8 max-w-2xl">
-        <h2 class="text-2xl font-medium mb-4">Company Information</h2>
+<h1>Details</h1>
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
-            <div>
-                <p class="font-medium text-gray-700">Company ID:</p>
-                <p>@Model.Company.CompanyId</p>
-            </div>
-            <div>
-                <p class="font-medium text-gray-700">Company Name:</p>
-                <p>@Model.Company.CompanyName</p>
-            </div>
-            <div class="sm:col-span-2">
-                <p class="font-medium text-gray-700">Address:</p>
-                <p>@Model.Company.CompanyAddress</p>
-            </div>
-            <div class="sm:col-span-2">
-                <p class="font-medium text-gray-700">Description:</p>
-                <p>@Model.Company.CompanyDescription</p>
-            </div>
-        </div>
-
-        <div class="mt-6 flex justify-between">
-            <a href="/CompanyIndex" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Back to Company List</a>
-        </div>
-    </div>
+<div>
+    <h4>Company</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.CompanyName)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.CompanyName)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.CompanyAddress)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.CompanyAddress)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Company.CompanyDescription)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Company.CompanyDescription)
+        </dd>
+    </dl>
+</div>
+<div>
+    <a asp-page="./Edit" asp-route-id="@Model.Company.CompanyId">Edit</a> |
+    <a asp-page="./Index">Back to List</a>
 </div>
