BE/FE: fix delivery redirection

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryDetails.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/DeliveryDetail"
 @model PRN231_2_EventFlowerExchange_FE.Pages.DeliveryPages.DetailsModel
 
 @{
@@ -80,9 +80,15 @@
                         </div>
                     </dl>
                 </div>
-                <div class="p-4 border-t border-gray-200 flex justify-end">
-                    <a asp-page="./Edit" class="bg-yellow-500 hover:bg-yellow-600 text-white font-semibold py-2 px-4 rounded mr-2">Edit Delivery</a>
-                </div>
+                <!-- Form for updating statuses -->
+                <form method="post" asp-page-handler="UpdateStatus" class="mt-4">
+                    <input type="hidden" name="deliveryId" value="@delivery.DeliveryId" />
+                    <input type="hidden" name="orderId" value="@delivery.Order.OrderId" />
+
+                    <button type="submit" class="bg-green-600 hover:bg-green-700 text-white py-2 px-4 rounded mt-2">
+                        Update Status
+                    </button>
+                </form>
             </div>
         }
     </div>
