--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryIndex.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/DeliveryPages/DeliveryIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/DeliveryIndex"
 @model PRN231_2_EventFlowerExchange_FE.Pages.DeliveryPages.IndexModel
 @{
     ViewData["Title"] = "Delivery Orders";
