FE: FIx Order Notification when Pay

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderFailure.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/OrderPages/OrderFailure.cshtml
@@ -23,7 +23,7 @@
                 Order Failure!
             </h3>
             <p class="text-gray-600 mb-6">
-                Please check your payment again, thank you.
+                @Model.ErrorMessage
             </p>
 
             <!-- Button lớn hơn -->
@@ -37,4 +37,3 @@
     </div>
 </div>
 
-<p>@Model.ErrorMessage</p>
