FE: Fix Register/Login placeholder

--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -59,7 +59,7 @@
                             @if (userRole == "Admin")
                             {
                                 <li class="rounded-sm px-3 py-1 hover:bg-gray-100">
-                                    <a href="/UserManagement" class="block w-full">Admin Dashboard</a>
+                                    <a href="/DashBoard" class="block w-full">AdminDashboard</a>
                                 </li>
                             }
                             else if (userRole == "Seller")
