--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Header.cshtml
@@ -12,7 +12,7 @@
             </div>
             <div class="hidden md:flex items-center space-x-8">
                 <a href="/Index" class="text-gray-800 hover:text-indigo-600">Home</a>
-                <a href="#about" class="text-gray-800 hover:text-indigo-600">About</a>
+                <a href="/About" class="text-gray-800 hover:text-indigo-600">About</a>
                 <a href="/FlowerPages/FlowerIndex" class="text-gray-800 hover:text-indigo-600">Flowers</a>
             </div>
             <div class="hidden md:flex items-center space-x-4">
