--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Login/Login.cshtml
@@ -15,12 +15,12 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="LoginRequest.Email"></label>
-                    <input asp-for="LoginRequest.Email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
+                    <input asp-for="LoginRequest.Email" placeholder="Enter your email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" />
                     <span asp-validation-for="LoginRequest.Email" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-4">
                     <label class="text-gray-700" asp-for="LoginRequest.Password"></label>
-                    <input asp-for="LoginRequest.Password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password" />
+                    <input asp-for="LoginRequest.Password" placeholder="Enter your password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password" />
                     <span asp-validation-for="LoginRequest.Password" class="text-danger"></span>
                 </div>
                 <div class="mt-8">
@@ -30,8 +30,8 @@
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/Register" class="text-xs text-gray-500 uppercase">or sign up</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
-                
-                </div><div class="mt-4 flex items-center justify-between">
+                </div>
+                <div class="mt-4 flex items-center justify-between">
                     <span class="border-b w-1/5 md:w-1/4"></span>
                     <a href="/RegisterSeller" class="text-xs text-gray-500 uppercase">or Sign up as Seller</a>
                     <span class="border-b w-1/5 md:w-1/4"></span>
