--- a/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Footer.cshtml
+++ b/PRN231_2_EventFlowerExchange_FE/PRN231_2_EventFlowerExchange_FE/Pages/Shared/_Footer.cshtml
@@ -1,37 +1,39 @@
 ﻿<footer class="bg-white">
     <div class="container px-4 mx-auto">
         <div class="pt-24 pb-11 mx-auto max-w-4xl">
-            <a class="block md:mx-auto mb-5 max-w-max" href="#">
-                <img src="~/images/hoalogo.png" alt="logo" class="h-8" />
-            </a>
-
-            <div class="flex flex-wrap justify-center -mx-3 lg:-mx-6">
-                <div class="w-full md:w-auto p-3 md:px-6">
-                    <a href="/terms"
-                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Terms</a>
-                </div>
-                <div class="w-full md:w-auto p-3 md:px-6">
-                    <a href="/privacy"
-                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Privacy</a>
-                </div>
-                <div class="w-full md:w-auto p-3 md:px-6">
-                    <a class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium" href="">Contact Us</a>
-                </div>
-                <div class="w-full md:w-auto p-3 md:px-6">
-                    <a href="/careers"
-                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Careers</a>
-                </div>
-                <div class="w-full md:w-auto p-3 md:px-6">
-                    <a href="/pricing"
-                       class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Pricing</a>
-                </div>
+            <div class="flex items-center justify-center mb-5">
+                <a class="flex items-center" href="#">
+                    <img src="~/images/hoalogo.png" alt="logo" class="h-8 mr-3" />
+                    <span class="text-xl font-semibold text-gray-800">Event Flower Exchange</span>
+                </a>
             </div>
+            @*  <div class="flex flex-wrap justify-center -mx-3 lg:-mx-6">
+            <div class="w-full md:w-auto p-3 md:px-6">
+            <a href="/terms"
+            class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Terms</a>
+            </div>
+            <div class="w-full md:w-auto p-3 md:px-6">
+            <a href="/privacy"
+            class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Privacy</a>
+            </div>
+            <div class="w-full md:w-auto p-3 md:px-6">
+            <a class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium" href="">Contact Us</a>
+            </div>
+            <div class="w-full md:w-auto p-3 md:px-6">
+            <a href="/careers"
+            class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Careers</a>
+            </div>
+            <div class="w-full md:w-auto p-3 md:px-6">
+            <a href="/pricing"
+            class="inline-block text-lg text-gray-500 hover:text-gray-600 font-medium">Pricing</a>
+            </div>
+            </div> *@
         </div>
     </div>
     <div class="border-b border-gray-100"></div>
     <div class="container px-4 mx-auto">
         <p class="py-10 md:pb-20 text-md text-gray-400 font-medium text-center">
-            © 2023 example.com.
+            © 2024 eventflowerexchange.com
             All rights reserved.
         </p>
     </div>
